test/tests/operators/to_ftp/error_prepare_failure_invalid_url.txt
error: FTP upload to `ftp://[` failed: !! unspecified: curl: URL using bad/illegal format or missing URL
 --> tests/operators/to_ftp/error_prepare_failure_invalid_url.tql:8:8
  |
8 | to_ftp "ftp://[" {
  |        ^^^^^^^^^ 
  |
